--- a/S11/style.css
+++ b/S11/style.css
@@ -5,7 +5,8 @@
     margin: 0;
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
-}
+    /* scroll-behavior:smooth */
+} 
 
 .logo {
     width: 64px;
@@ -41,6 +42,8 @@ header {
     position: sticky;
     top: 0;;
 }
+
+
 
 footer p {
     text-align: center;
